kubernetes/jabeh/07-00-ingress-beanstalk-dash.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-realm: Authentication Required
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/proxy-body-size: 32m
  name: jabeh-develop-ingress
  namespace: jabeh
spec:
  rules:
  - host: beanstalk.clickyab.ae
    http:
      paths:
      - backend:
          serviceName: jabeh-beanstalkd
          servicePort: 80
        path: /
